--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "apexcharts": "^3.33.0",
     "classlist-polyfill": "^1.2.0",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.2.3",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
     "vue-router": "^3.5.3",
